@@ -13,5 +13,6 @@ c:::755:/:svok:
 c:::755:/:svscan:
 c:::755:/:svscanboot:
 c:::755:/:svstat:
+c:::755:/:svup:
 c:::755:/:tai64n:
 c:::755:/:tai64nlocal:
