@@ -1,3 +1,3 @@
 dependon envdir envuidgid fghack installer matchtest multilog pgrphack \
 	readproctitle rts.tests setlock setuidgid softlimit supervise svc \
-	svok svscan svscanboot svstat tai64n tai64nlocal
+	svok svscan svscanboot svstat svup tai64n tai64nlocal
