@@ -1,0 +1,3 @@
+svpath.o
+unix.a
+byte.a
