@@ -38,3 +38,5 @@ to be an executable file (instead of a directory as for svscan).
 
 Modified supervise to overwrite status instead of creating a new file.
 This allows the "supervise" subdirectory to be non-writeable.
+
+Added a "svup" tool to determine if a service is running.
